# hirool_tool

./: README.md  hire_api _postman_collection.json
api/: gunicorn.conf  (+1 more)
hire-api/: .editorconfig  GETTING_STARTED_DEV.md  README.md  dockerfile  pyproject.toml
hire-api/Test/Test/: settings.py
hire-api/api/: .~lock.Paris_Kamal_Resume.docx#  6a8497f0-22ef-490d-8288-2852e91e2b89.docx  db.sqlite3  start.sh  variables.sh.sample
hire-api/api/accounts/: admin.py  constants.py  serializers.py
hire-api/api/accounts/dashboard/: home.py
hire-api/api/accounts/migrations/: 0001_initial.py  0002_auto_20190615_1917.py  0002_auto_20200909_1150.py  0005_auto_20190615_2136.py  0006_auto_20190627_1822.py  0008_auto_20200225_2008.py  0013_auto_20200225_2347.py  (+16 more)
hire-api/api/api/: .env.py  celery.py  default_settings.py  settings.py  static_files.py  urls.py
hire-api/api/candidate/: models.py  serializers.py  services.py  views.py
hire-api/api/clients/: admin.py  models.py  serializers.py  services.py  views.py
hire-api/api/interview/: models.py  serializers.py  services.py  views.py
hire-api/api/jobs/: models.py  serializer.py  service.py  views.py
hire-api/api/json_files/: apps.py  views.py
hire-api/api/leave_management/: models.py  serializers.py  views.py
hire-api/api/libs/: admin.py  constants.py  custom_api_docs.py  file_read.py  mixins.py  otpgenerate.py  pagination.py  serializers.py  viewsets.py
hire-api/api/misc/: admin.py  urls.py
hire-api/api/test1/: views.py
hire-api/requirements/: dev-requirements.txt  docker-requirements.txt  requirements.txt
(+182 files in other folders)
