[tool.poetry]
name = "hire-api"
version = "0.1.0"
description = ""
authors = ["priya1008 <priyapatil20191l@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.1"
pillow = "^7.2.0"
celery = "4.2.0"
djangorestframework = "3.8.2"
gunicorn = "19.8.1"
redis = "2.10.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
